# xsynth

./: .gitignore  LICENSE  Projucer  README.md  bootstrap.sloth
cli-app-makefile/: .clangd  NewProject.jucer  write-clangd.sloth
cli-app-makefile/Builds/LinuxMakefile/: Makefile
cli-app-makefile/Builds/VisualStudio2019/: NewProject.sln  NewProject_ConsoleApp.vcxproj.filters  resources.rc  xsynth.sln  xsynth_ConsoleApp.vcxproj  xsynth_ConsoleApp.vcxproj.filters
cli-app-makefile/JuceLibraryCode/: JuceHeader.h
cli-app-makefile/Source/: Main.cpp
cliCmakeNoProJucer/: cmake.sloth  main.cpp  pitches.h
cliSineWave/: .clangd  .gitignore  CMakeLists.txt  Makefile  cliSineWave.jucer  cmake.sloth  configure.sloth  main.cpp  write-clangd.sloth
cliSineWave/Builds/LinuxMakefile/: Makefile
cliSineWave/JuceLibraryCode/: JuceHeader.h
cliSineWave/Source/: Main.cpp  pitches.h
common/: write-clangd.sloth
guiApp/: CMakeLists.txt  main.cpp
tool/: csv-to-cpp.rb  pitches.csv  pitches.h
